Clean code, remove OpenJUMPConfiguration (move to JUMPConfiguration)