@@ -31,40 +31,20 @@
  */
 package com.vividsolutions.jump.workbench;
 
-import java.awt.BorderLayout;
 import java.awt.Component;
 import java.awt.Font;
-import java.awt.GridLayout;
 import java.awt.Image;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
+import java.awt.font.TextAttribute;
 import java.awt.image.BufferedImage;
 import java.io.File;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.TreeSet;
+import java.lang.reflect.Method;
+import java.util.*;
+import java.util.stream.Collectors;
 
-import javax.swing.BorderFactory;
-import javax.swing.ImageIcon;
-import javax.swing.JComponent;
-import javax.swing.JDialog;
-import javax.swing.JFrame;
-import javax.swing.JLabel;
-import javax.swing.JOptionPane;
-import javax.swing.JPanel;
-import javax.swing.JScrollPane;
-import javax.swing.JTextArea;
-import javax.swing.SwingUtilities;
-import javax.swing.UIDefaults;
-import javax.swing.UIManager;
+import javax.swing.*;
 import javax.swing.plaf.FontUIResource;
-
-import org.openjump.OpenJumpConfiguration;
 
 import com.vividsolutions.jump.I18N;
 import com.vividsolutions.jump.JUMPVersion;
@@ -106,7 +86,7 @@ public class JUMPWorkbench {
   }
 
   private static ArrayList<Image> appIcons() {
-    ArrayList<Image> iconlist = new ArrayList<Image>();
+    ArrayList<Image> iconlist = new ArrayList<>();
 
     // let's get festive
     if (SplashPanelV2.itsThatTimeAgain()) {
@@ -139,7 +119,6 @@ public class JUMPWorkbench {
       iconlist.add(IconLoader.image("oj_32.png"));
       iconlist.add(IconLoader.image("oj_48.png"));
       iconlist.add(IconLoader.image("oj_256.png"));
-      // java.util.Collections.reverse(iconlist);
     }
 
     return iconlist;
@@ -149,11 +128,11 @@ public class JUMPWorkbench {
   public static final ArrayList<Image> APP_ICONS = appIcons();
   public static final ImageIcon APP_ICON = new ImageIcon(APP_ICONS.get(0));
   
-  // -- dont change the following strings
-  public final static String PROPERTIES_OPTION = "properties";
-  public final static String DEFAULT_PLUGINS = "default-plugins";
-  public final static String PLUG_IN_DIRECTORY_OPTION = "plug-in-directory";
-  public final static String I18N_FILE = "i18n";
+  // -- don't change the following strings
+  public static final String PROPERTIES_OPTION = "properties";
+  public static final String DEFAULT_PLUGINS = "default-plugins";
+  public static final String PLUG_IN_DIRECTORY_OPTION = "plug-in-directory";
+  public static final String I18N_FILE = "i18n";
   public static final String INITIAL_PROJECT_FILE = "project";
   public static final String I18NPREFIX = JUMPWorkbench.class.getPackage().getName()+".";
   public static final String STATE_OPTION = "state";
@@ -161,23 +140,23 @@ public class JUMPWorkbench {
   // Added by STanner to allow I18N to have access to this
   public static String I18N_SETLOCALE = "";
 
-  private static Class progressMonitorClass = SingleLineProgressMonitor.class;
+  private static final Class<?> progressMonitorClass = SingleLineProgressMonitor.class;
 
   // <<TODO:REFACTORING>> Move images package under
   // com.vividsolutions.jump.workbench
   // to avoid naming conflicts with other libraries. [Jon Aquino]
   private static JUMPWorkbench workbench;
   private static CommandLine commandLine;
-  private WorkbenchContext context = new JUMPWorkbenchContext(this);
+  private final WorkbenchContext context = new JUMPWorkbenchContext(this);
   private WorkbenchFrame frame;
-  private DriverManager driverManager = new DriverManager(frame);
-  private WorkbenchProperties properties;
-  private PlugInManager plugInManager;
-  private Blackboard blackboard = new Blackboard();
+  private final DriverManager driverManager = new DriverManager(frame);
+  private final WorkbenchProperties properties;
+  private final PlugInManager plugInManager;
+  private final Blackboard blackboard = new Blackboard();
+
 
   /**
-   * @param o
-   *          a window to decorate with icon
+   * @param o a window to decorate with icon
    */
   public static void setIcon(Object o) {
     // attach the right icon, depending on
@@ -186,22 +165,21 @@ public class JUMPWorkbench {
     // - underlying object type (JFrame, JInternalFrame, others? )
     // let's go
     if (o instanceof JFrame) {
-      JFrame f = (JFrame) o;
+      JFrame frame = (JFrame) o;
       try {
         // case java 1.6+
-        Class[] types = { java.util.List.class };
-        java.lang.reflect.Method method = JFrame.class.getMethod(
-            "setIconImages", types);
+        Class<?>[] types = { List.class };
+        Method method = JFrame.class.getMethod("setIconImages", types);
 
         Object[] params = { APP_ICONS };
-        method.invoke(f, params);
+        method.invoke(frame, params);
       } catch (Exception e) {
         // case java 1.5-, is really bad with transparent pngs, so we stick with
         // the old gif
-        f.setIconImage(APP_ICON.getImage());
+        frame.setIconImage(APP_ICON.getImage());
       }
-    } else if (o instanceof javax.swing.JInternalFrame) {
-      javax.swing.JInternalFrame f = (javax.swing.JInternalFrame) o;
+    } else if (o instanceof JInternalFrame) {
+      JInternalFrame f = (JInternalFrame) o;
       f.setFrameIcon(getIcon());
     }
   }
@@ -217,8 +195,7 @@ public class JUMPWorkbench {
    * @param s a visible SplashWindow to close when initialization is complete and
    *         the WorkbenchFrame is opened
    */
-  public JUMPWorkbench(String title, String[] args, final Component s,
-      TaskMonitor monitor) throws Exception {
+  public JUMPWorkbench(String title, final Component s, TaskMonitor monitor) throws Exception {
 
     frame = new WorkbenchFrame(title, context);
     frame.addWindowListener(new WindowAdapter() {
@@ -247,18 +224,14 @@ public class JUMPWorkbench {
       propertiesFile = new File(commandLine.getOption(PROPERTIES_OPTION)
           .getArg(0));
       if (propertiesFile.exists()) {
-        // [sstein 6.July.2008] disabled to enable loading of two properties
-        // files
-        // properties = new WorkbenchPropertiesFile(propertiesFile, frame);
         propertiesFileExists = true;
       } else {
-        Logger.warn("Properties file does not exist: "
-            + propertiesFile);
+        Logger.warn("Properties file does not exist: " + propertiesFile);
       }
     }
     
     // list the properties files to use
-    List<File> files = new ArrayList<File>();
+    List<File> files = new ArrayList<>();
     if (defaultFileExists)
       files.add(defaultFile);
     if (propertiesFileExists)
@@ -269,7 +242,7 @@ public class JUMPWorkbench {
     // -- end new
     
     File extensionsDirectory = null;
-    List<File> moreDirs = new ArrayList<File>();
+    List<File> moreDirs = new ArrayList<>();
     if (commandLine.hasOption(PLUG_IN_DIRECTORY_OPTION)) {
       // we support multiple -plug-in-directory definitions, where the first is set default
       // and all others and contained jar/zip files get added to classpath below
@@ -296,7 +269,7 @@ public class JUMPWorkbench {
       extensionsDirectory = new File("lib/ext");
     }
 
-    if (!extensionsDirectory.exists()) {
+    if (extensionsDirectory != null && !extensionsDirectory.exists()) {
       // Added further information so that debug user will know where
       // it is actually looking for as the extension directory. [Ed Deen]
       Logger.error("Extensions directory does not exist: "
@@ -396,35 +369,33 @@ public class JUMPWorkbench {
       // early change the default font definition of the jre if necessary, the
       // first internationalized string shown is 'JUMPWorkbench.version' on
       // splashpanel
-      setFont();
+      if (setFont()) {
+        Logger.info("New fonts have been loaded");
+      }
 
-      ProgressMonitor progressMonitor = (ProgressMonitor) progressMonitorClass
-          .newInstance();
+      com.vividsolutions.jump.workbench.ui.ProgressMonitor progressMonitor =
+              (com.vividsolutions.jump.workbench.ui.ProgressMonitor) progressMonitorClass
+          .getDeclaredConstructor().newInstance();
       SplashPanelV2 splashPanel = new SplashPanelV2(splashImage(),
           I18N.get("ui.AboutDialog.version") + " "
               + JUMPVersion.CURRENT_VERSION);
-//      splashPanel.add(progressMonitor, new GridBagConstraints(0, 10, 1, 1, 1,
-//          0, GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL,
-//          new Insets(0, 0, 0, 10), 0, 0));
       splashPanel.addProgressMonitor(progressMonitor);
 
-      main(args, I18N.get("JUMPWorkbench.jump"), splashPanel, progressMonitor);
+      main(I18N.get("JUMPWorkbench.jump"), splashPanel, progressMonitor);
       Logger.info("OJ start took "
           + Timer.secondsSinceString(start) + "s alltogether.");
 
     } catch (final Throwable t) {
       try {
-        SwingUtilities.invokeAndWait(new Runnable() {
-          public void run() {
-            try {
-              initLookAndFeel();
-            } catch (Exception e) {
-              // fail silently
-            }
-            ErrorDialog.show(null,
-                StringUtil.toFriendlyName(t.getClass().getSimpleName()),
-                WorkbenchFrame.toMessage(t), StringUtil.stackTrace(t));
+        SwingUtilities.invokeAndWait(() -> {
+          try {
+            initLookAndFeel();
+          } catch (Exception e) {
+            // fail silently
           }
+          ErrorDialog.show(null,
+              StringUtil.toFriendlyName(t.getClass().getSimpleName()),
+              WorkbenchFrame.toMessage(t), StringUtil.stackTrace(t));
         });
       } catch (Throwable t2) {
         Logger.error(t2);
@@ -437,9 +408,7 @@ public class JUMPWorkbench {
   /**
    * setupClass is specified as a String to prevent it from being loaded before
    * we display the splash screen, in case setupClass takes a long time to load.
-   * 
-   * @param args
-   *          main application arguments
+   *
    * @param title
    *          application title
    * @param splashComponent
@@ -448,14 +417,14 @@ public class JUMPWorkbench {
    *          notified of progress of plug-in loading
    * @throws Exception if an Exception occurs
    */
-  static void main(String[] args, String title, JComponent splashComponent,
+  static void main(String title, JComponent splashComponent,
       TaskMonitor taskMonitor) throws Exception {
 
     SplashWindow splashWindow = new SplashWindow(splashComponent);
     splashWindow.setVisible(true);
 
     taskMonitor.report(I18N.get("JUMPWorkbench.status.create"));
-    workbench = new JUMPWorkbench(title, args, splashWindow, taskMonitor);
+    workbench = new JUMPWorkbench(title, splashWindow, taskMonitor);
 
     taskMonitor.report(I18N.get("JUMPWorkbench.status.configure-core"));
     // first things first, make persistent data available early
@@ -472,10 +441,8 @@ public class JUMPWorkbench {
 
     // now setup our configuration
     // TODO: clean up and merge with postExtensionInitialization below or even better put into xml config
-    new JUMPConfiguration().setup(workbench.context);
-    
-    taskMonitor.report(I18N.get("JUMPWorkbench.status.restore-state"));
-    frame.restore();
+    JUMPConfiguration config = new JUMPConfiguration();
+    config.setup(workbench.context);
 
     // load plugin/extensions via plugin mgr.
     taskMonitor.report(I18N.get("JUMPWorkbench.status.load-extensions"));
@@ -484,18 +451,16 @@ public class JUMPWorkbench {
     // some more intialization 
     // TODO: clean up and merge with setup above or even better put into xml config
     taskMonitor.report(I18N.get("JUMPWorkbench.status.initialize-datasources"));
-    OpenJumpConfiguration.postExtensionInitialization(workbench.context);
-    
+    config.postExtensionInitialization(workbench.context);
+
+    taskMonitor.report(I18N.get("JUMPWorkbench.status.restore-state"));
+    frame.restore();
     taskMonitor.report(I18N.get("JUMPWorkbench.status.show-workbench"));
-    workbench.getFrame().setVisible(true);
+    frame.setVisible(true);
     // Activate SelectFeaturesTool cursor after opening a new session.
     // See also JUMPConfiguration.configureToolBar() where the select
     // button has been selected.
-    SwingUtilities.invokeLater(new Runnable() {
-      public void run() {
-        frame.getToolBar().reClickSelectedCursorToolButton();
-      }
-    });
+    SwingUtilities.invokeLater(() -> frame.getToolBar().reClickSelectedCursorToolButton());
   }
 
   private static void fixLookAndFeel() {
@@ -533,12 +498,11 @@ public class JUMPWorkbench {
   // this is in preparation that we might want to support more fonts in the
   // future
   private static Font[] loadFonts() throws Exception {
-    Font font = Font.createFont(Font.TRUETYPE_FONT, Class.class.getClass()
+    Font font = Font.createFont(Font.TRUETYPE_FONT, Class.class
         .getResource("/language/fonts/code2000.ttf").openStream());
-    // since 1.6 we could register the font and use it by name
-    // but using the font directly makes us 1.5 compatible
-    // GraphicsEnvironment.getLocalGraphicsEnvironment().registerFont( font
-    // );
+    // since 1.6 we could register the font and use it by name but using
+    // the font directly makes us 1.5 compatible
+    // GraphicsEnvironment.getLocalGraphicsEnvironment().registerFont(font);
     return new Font[] { font };
   }
 
@@ -547,11 +511,11 @@ public class JUMPWorkbench {
     boolean replaced = false;
     Font font = null;
 
-    java.util.Enumeration keys = UIManager.getDefaults().keys();
+    Enumeration<Object> keys = UIManager.getDefaults().keys();
     while (keys.hasMoreElements()) {
       Object key = keys.nextElement();
       Object value = UIManager.get(key);
-      // loop over fontuires entries
+      // loop over font ui resources entries
       if (value instanceof javax.swing.plaf.FontUIResource) {
         FontUIResource fold = ((javax.swing.plaf.FontUIResource) value);
 
@@ -563,20 +527,18 @@ public class JUMPWorkbench {
             font = loadFonts()[0];
 
           // copy attributes
-          Map attrs = fold.getAttributes();
+          Map<TextAttribute,?> attrs = fold.getAttributes();
           // remove family attribute
-          java.text.AttributedCharacterIterator.Attribute fam = null;
-          for (Iterator iterator = attrs.keySet().iterator(); iterator
-              .hasNext();) {
-            fam = (java.text.AttributedCharacterIterator.Attribute) iterator
-                .next();
-            if (fam.toString().equals("java.awt.font.TextAttribute(family)")) {
+          TextAttribute fam = null;
+          for (TextAttribute textAttribute : attrs.keySet()) {
+            if (textAttribute.toString().equals("java.awt.font.TextAttribute(family)")) {
+              fam = textAttribute;
               break;
             }
           }
           if (fam != null)
             attrs.remove(fam);
-          // create the new fontuires
+          // create the new font ui resources
           FontUIResource fnew = new javax.swing.plaf.FontUIResource(
               font.deriveFont(attrs));
 
@@ -633,44 +595,34 @@ public class JUMPWorkbench {
 
   private static void printProperties(String in) {
     Properties ps = System.getProperties();
-    TreeSet<String> v = new TreeSet(ps.keySet());
-    String out = "";
-    for (String key : v) {
-      out += key + "=" + ps.getProperty(key) + "\n";
+    TreeSet<Object> v = new TreeSet<>(ps.keySet());
+    StringBuilder out = new StringBuilder();
+    for (Object key : v) {
+      out.append(key).append("=").append(ps.getProperty(key.toString())).append("\n");
     }
 
-    out += "\n\napplying default lnf";
+    out.append("\n\napplying default lnf");
     
     // init lnf for UIDefaults, ignore errors
     try {
       initLookAndFeel();
-      out += " - OK\n";
+      out.append(" - OK\n");
     } catch (Exception e) {
-      out += "\n\n"+StringUtil.stackTrace(e)+"\n\n";
+      out.append("\n\n").append(StringUtil.stackTrace(e)).append("\n\n");
     }
 
-    out += "\n\nUIDefaults\n\n";
+    out.append("\n\nUIDefaults\n\n");
     UIDefaults defaults = UIManager.getDefaults();
-    TreeSet ts = new TreeSet(new Comparator() {
-      public int compare(Object a, Object b) {
-        Map.Entry ea = (Map.Entry) a;
-        Map.Entry eb = (Map.Entry) b;
-        return ea.getKey().toString().compareTo(eb.getKey().toString());
-      }
-    });
-    ts.addAll(defaults.entrySet());
-
-    Iterator it = ts.iterator();
-    while (it.hasNext()) {
-      Map.Entry pair = (Map.Entry) it.next();
-      Object key = pair.getKey();
-      Object value = defaults.get(key);
-      out += key + "=" + value + "\n";
+    for (Map.Entry<Object,Object> entry : defaults.entrySet().stream()
+            .sorted(Comparator.comparing(Map.Entry::toString))
+            .collect(Collectors.toList())) {
+      out.append(entry.getKey()).append("=").append(entry.getValue()).append("\n");
     }
-    printProperly(in + "\n" + out);
+
+    printProperly(in + "\n" + out.toString());
   }
 
-  private static void parseCommandLine(String[] args) throws ParseException {
+  private static void parseCommandLine(String[] args) {
     commandLine = new CommandLine('-');
     commandLine.addOptionSpec(new OptionSpec(PROPERTIES_OPTION, 1,
         "workbench property file (activate extensions and plugins)"));
@@ -682,7 +634,7 @@ public class JUMPWorkbench {
         .addOptionSpec(new OptionSpec(
             I18N_FILE,
             1,
-            "switch language and numberformatting by overriding system's default locale setting, e.g en_US"));
+            "switch language and number formatting by overriding system's default locale setting, e.g en_US"));
     // [UT] 17.08.2005
     commandLine.addOptionSpec(new OptionSpec(INITIAL_PROJECT_FILE, 1,
         "deprecated, simply add files as parameter"));
@@ -726,73 +678,37 @@ public class JUMPWorkbench {
     return blackboard;
   }
 
-  private static abstract class ProgressMonitor extends JPanel implements
-      TaskMonitor {
-    private Component component;
+  //private static class VerticallyScrollingProgressMonitor extends
+  //    ProgressMonitor {
+  //  private static final int ROWS = 3;
+  //  private final JLabel[] labels;
+//
+  //  public VerticallyScrollingProgressMonitor() {
+  //    super(new JPanel(new GridLayout(ROWS, 1)));
+//
+  //    JPanel panel = (JPanel) getComponent();
+  //    panel.setOpaque(false);
+  //    labels = new JLabel[ROWS];
+//
+  //    for (int i = 0; i < ROWS; i++) {
+  //      // " " not "", to give the label some height. [Jon Aquino]
+  //      labels[i] = new JLabel(" ");
+  //      labels[i].setFont(labels[i].getFont().deriveFont(Font.BOLD));
+  //      panel.add(labels[i]);
+  //    }
+  //  }
+//
+  //  protected void addText(String s) {
+  //    for (int i = 0; i < (ROWS - 1); i++) { // -1
+  //      labels[i].setText(labels[i + 1].getText());
+  //    }
+//
+  //    labels[ROWS - 1].setText(s);
+  //  }
+  //}
 
-    public ProgressMonitor(Component component) {
-      this.component = component;
-      setLayout(new BorderLayout());
-      add(component, BorderLayout.CENTER);
-      setOpaque(false);
-    }
-
-    protected Component getComponent() {
-      return component;
-    }
-
-    protected abstract void addText(String s);
-
-    public void report(String description) {
-      addText(description);
-    }
-
-    public void report(int itemsDone, int totalItems, String itemDescription) {
-      addText(itemsDone + " / " + totalItems + " " + itemDescription);
-    }
-
-    public void report(Exception exception) {
-      addText(StringUtil.toFriendlyName(exception.getClass().getName()));
-    }
-
-    public void allowCancellationRequests() {
-    }
-
-    public boolean isCancelRequested() {
-      return false;
-    }
-  }
-
-  private static class VerticallyScrollingProgressMonitor extends
-      ProgressMonitor {
-    private static int ROWS = 3;
-    private JLabel[] labels;
-
-    public VerticallyScrollingProgressMonitor() {
-      super(new JPanel(new GridLayout(ROWS, 1)));
-
-      JPanel panel = (JPanel) getComponent();
-      panel.setOpaque(false);
-      labels = new JLabel[ROWS];
-
-      for (int i = 0; i < ROWS; i++) {
-        // " " not "", to give the label some height. [Jon Aquino]
-        labels[i] = new JLabel(" ");
-        labels[i].setFont(labels[i].getFont().deriveFont(Font.BOLD));
-        panel.add(labels[i]);
-      }
-    }
-
-    protected void addText(String s) {
-      for (int i = 0; i < (ROWS - 1); i++) { // -1
-        labels[i].setText(labels[i + 1].getText());
-      }
-
-      labels[ROWS - 1].setText(s);
-    }
-  }
-
-  private static class SingleLineProgressMonitor extends ProgressMonitor {
+  private static class SingleLineProgressMonitor
+          extends com.vividsolutions.jump.workbench.ui.ProgressMonitor {
     public SingleLineProgressMonitor() {
       super(new JLabel(" "));
       getComponent().setFont(getComponent().getFont()
@@ -805,63 +721,50 @@ public class JUMPWorkbench {
     }
   }
 
-  private static class HorizontallyScrollingProgressMonitor extends
-      ProgressMonitor {
-    private static final String BUFFER = "   ";
-
-    public HorizontallyScrollingProgressMonitor() {
-      super(new JLabel(" "));
-      getComponent().setFont(getComponent().getFont()
-          .deriveFont(Font.BOLD));
-      ((JLabel) getComponent()).setHorizontalAlignment(JLabel.RIGHT);
-    }
-
-    protected void addText(String s) {
-      ((JLabel) getComponent()).setText(BUFFER + s
-          + ((JLabel) getComponent()).getText());
-    }
-  }
+  //private static class HorizontallyScrollingProgressMonitor extends
+  //    ProgressMonitor {
+  //  private static final String BUFFER = "   ";
+  //  public HorizontallyScrollingProgressMonitor() {
+  //    super(new JLabel(" "));
+  //    getComponent().setFont(getComponent().getFont()
+  //        .deriveFont(Font.BOLD));
+  //    ((JLabel) getComponent()).setHorizontalAlignment(JLabel.RIGHT);
+  //  }
+  //  protected void addText(String s) {
+  //    ((JLabel) getComponent()).setText(BUFFER + s
+  //        + ((JLabel) getComponent()).getText());
+  //  }
+  //}
 
   /*
    * Helper method to print to GUI and Console (e.g. help text)
    */
   private static void printProperly(String text) {
     // we print it to gui and console, just to be sure
-    // if (System.console() == null) {
     // make sure lnf is set
     try {
       initLookAndFeel();
     } catch (Exception e) {
       // fail silently
     }
-    // JLabel label = new
-    // JLabel("<html><body style='width:300px'>"+text.replaceAll("\n",
-    // "<br>")+"</body></html>");
     JTextArea textArea = new JTextArea();
     JScrollPane scrollPane = new JScrollPane(textArea);
-    // textArea.setLineWrap(true);
-    // textArea.setWrapStyleWord(true);
     textArea.setEditable(false);
     textArea.setText(text);
     scrollPane.setBorder(BorderFactory.createEmptyBorder());
-    // scrollPane.setPreferredSize( new Dimension( 300, 300 ) );
     JOptionPane pane = new JOptionPane(scrollPane,
         JOptionPane.INFORMATION_MESSAGE, JOptionPane.DEFAULT_OPTION,
         IconLoader.icon("oj_32.png"));
     JDialog d = pane.createDialog(I18N.get("JUMPWorkbench.jump"));
     // some cute icons
-    ArrayList l = new ArrayList(APP_ICONS);
+    ArrayList<Image> l = new ArrayList<>(APP_ICONS);
     l.add(0, IconLoader.image("information_16x16.png"));
     d.setIconImages(l);
     // harmonize background color
     textArea.setBackground(new JLabel().getBackground());
     d.setResizable(true);
     d.pack();
-    // GUIUtil.centreOnScreen(d);
     d.setVisible(true);
-    // } else
-    System.out.println(text);
   }
-  
 
 }
